Fix login screen position on mobile

--- a/ui/apps/themes/login/login.less
+++ b/ui/apps/themes/login/login.less
@@ -318,7 +318,7 @@ html.baseline {
 
     #io-ox-login-container {
         top: 0;
-        transform: none;
+        .translate(0; 0);
     }
 
     #io-ox-languages {
